# SmartWallet

Client/ClientGui/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sign_up.cpp  sign_up.h  sign_up.ui  signin.cpp  signin.h  signin.ui  stringhasher.cpp  stringhasher.h  validator.cpp  validator.h  wallet.cpp  wallet.h  wallet.ui
ClientGui/: mainwindow.cpp  mainwindow.h  sign_up.cpp  sign_up.h  sign_up.ui  signin.cpp  signin.h  signin.ui  validator.cpp  validator.h  wallet.cpp  wallet.h  wallet.ui
Server/ServerGui/: CMakeLists.txt  customer.cpp  customer.h  customer_management.cpp  customer_management.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multithreadqueue.cpp  multithreadqueue.h  server.cpp  server.h
client/: client.cpp  client.h
server/: customer.cpp  customer.h  customer_management.cpp  customer_management.h  main.cpp  server.cpp  server.h
